# factsoup

./: .gitignore  README.md  alembic.ini  dtos.py  enums.py  main.py  models.py  pyproject.toml  storage.db
alembic/: env.py
alembic/versions/: 496accb5d2bc_initial.py
services/: chat_gpt.py  query.py
